Add complete landing page with order form, Google Sheets, and Facebook Pixel
- Implemented order form with 58 wilayas and shipping fees
- Added delivery type selection (home/bureau)
- Added color selection (white/grey)
- Integrated Google Sheets for order tracking
- Added Facebook Pixel tracking (PageView, ViewContent, InitiateCheckout, Purchase)
- Mobile-optimized with responsive design
- RTL Arabic layout

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# random images in root (keep only in public/)
+/*.jpg
+/*.jpeg
+/*.png
+/*.jfif
