--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "googleapis": "^166.0.0",
+    "keen-slider": "^6.8.6",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "next-seo": "^7.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-compare-slider": "^3.1.0",
+    "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-rtl": "^0.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
